# redline-plugin-tauri

./: Cargo.toml  LICENSE  README.md  SKILL.md  build.rs
.github/workflows/: publish.yml
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: capture_screenshot.toml
permissions/schemas/: schema.json
src/: lib.rs
src/js/: annotation-overlay.js
